--- a/homeserver/src/views/dashboard/sidebar.ejs
+++ b/homeserver/src/views/dashboard/sidebar.ejs
@@ -22,6 +22,13 @@
                         </p>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a href="/chat" class="nav-link">
+                        <i class="nav-icon fas fa-comment-dots"></i>
+                        <p> Chat</p>
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
