add webrtc test.

--- a/homeserver/src/views/dashboard/sidebar.ejs
+++ b/homeserver/src/views/dashboard/sidebar.ejs
@@ -10,7 +10,7 @@
     <div class="sidebar">
         <!-- Sidebar Menu -->
         <nav class="mt-2">
-            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+            <ul class="nav nav-pills nav-sidebar d-flex flex-column flex-shrink-0" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
                 <li class="nav-item">
