update api endpoints.

--- a/homeserver/src/views/home.ejs
+++ b/homeserver/src/views/home.ejs
@@ -120,7 +120,7 @@
                                                                                         id="slider"></span>
                                                                                     <input type="range"
                                                                                         name="<%= '/'+page.homeName+'/'+page.Home[i].room.roomName+'/'+ page.Home[i].room.devices[j].deviceName+key%>"
-                                                                                        class="form-range" min="0"
+                                                                                        class="form-range" min="0" step="20"
                                                                                         max="180" id="range">
 
                                                                                     <%}else{%>
