--- a/homeserver/src/views/dashboard/header.ejs
+++ b/homeserver/src/views/dashboard/header.ejs
@@ -1,10 +1,14 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>AdminLTE 3 | Starter</title>
+<title>CMPE</title>
 
 <!-- Google Font: Source Sans Pro -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
 <!-- Font Awesome Icons -->
 <link rel="stylesheet" href="/static/plugins/fontawesome-free/css/all.min.css">
+
+<link rel="stylesheet" href="/static/plugins/chart.js/Chart.min.css">
 <!-- Theme style -->
 <link rel="stylesheet" href="/static/dist/css/adminlte.min.css">
+
+<script src="/static/plugins/chart.js/Chart.min.js"></script>
