--- a/homeserver/src/views/dashboard/scripts.ejs
+++ b/homeserver/src/views/dashboard/scripts.ejs
@@ -3,3 +3,6 @@
 <script src="/static/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
 <script src="/static/dist/js/adminlte.min.js"></script>
+
+<script src="/static/plugins/chart.js/Chart.min.js"></script>
+
