--- a/homeserver/src/views/home.ejs
+++ b/homeserver/src/views/home.ejs
@@ -76,6 +76,7 @@
             <%- include('dashboard/contentHeader',{page}) -%>
                 <div class="content">
                     <div class="container-fluid">
+
                         <div class="row">
                             <% for(var i=0; i < page.Home.length; i++) { %>
                                 <div class="col-lg">
@@ -120,8 +121,8 @@
                                                                                         id="slider"></span>
                                                                                     <input type="range"
                                                                                         name="<%= '/'+page.homeName+'/'+page.Home[i].room.roomName+'/'+ page.Home[i].room.devices[j].deviceName+key%>"
-                                                                                        class="form-range" min="0" step="20"
-                                                                                        max="180" id="range">
+                                                                                        class="form-range" min="0"
+                                                                                        step="20" max="180" id="range">
 
                                                                                     <%}else{%>
                                                                                         <label class="switch">
@@ -134,10 +135,13 @@
 
                                                                         </div>
                                                                         <% }) %>
+                                                                            <div
+                                                                                id="charts-<%=page.Home[i].room.devices[j].deviceName%>">
+                                                                                <canvas id="myChart"
+                                                                                    deviceName="<%=page.Home[i].room.devices[j].deviceName%>"></canvas>
+                                                                            </div>
 
                                                                 </div>
-
-                                                                </ul>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -147,7 +151,6 @@
                                     </div>
                                 </div>
                                 <% } %>
-
                         </div>
                     </div>
                 </div>
@@ -155,6 +158,7 @@
 
 
 </body>
+
 <script>
     var slider = document.getElementById("range");
     var output = document.getElementById("slider");
@@ -163,13 +167,13 @@
         output.innerHTML = '<br>' + '<code>' + this.name + '</code> = ' + this.value;
         let body = { topic: this.name, msg: this.value };
         console.log(body);
-        postRequest("/api/publish", body);
+        httpRequest("/api/publish", 'post', body);
     }
-    async function postRequest(endpoint, body) {
+    async function httpRequest(endpoint, type, body = null) {
 
         console.log("RequestUrl:", endpoint);
         const fetchOptions = {
-            method: "post",
+            method: type,
             credentials: "same-origin",
             headers: {
                 'Accept': 'application/json, text/plain, */*',
@@ -178,6 +182,9 @@
             body: JSON.stringify(body)
 
         };
+        if (body === null) {
+            delete fetchOptions.body;
+        }
         const response = await fetch(location.protocol + '//' + location.host + endpoint, fetchOptions);
 
         if (!response.ok) {
@@ -186,9 +193,40 @@
         }
 
         console.log("response:", response);
+        return (response.text());
 
     }
 
+
+</script>
+
+<script>
+    var ctx = document.getElementById("myChart").getContext('2d');
+    var device = document.getElementById("myChart");
+    window.onload = async () => {
+        let datas = JSON.parse( await httpRequest("/api/data?deviceName=" + device.getAttribute("deviceName"), 'get'));
+        let types = Object.keys(datas);
+        console.log(types);
+    }
+
+    const myChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+            datasets: [{
+                label: '# of Votes',
+                data: [12, 19, 3, 5, 2, 3],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                y: {
+                    beginAtZero: true
+                }
+            }
+        }
+    });
 
 </script>
 <%- include('dashboard/scripts') -%>
