--- a/homeserver/src/views/home.ejs
+++ b/homeserver/src/views/home.ejs
@@ -117,9 +117,9 @@
                                                                                 <br>
                                                                                 <% if(key.startsWith('/servo')){ %>
                                                                                     <label for="ll"
+                                                                                        id="<%= '/'+page.homeName+'/'+page.Home[i].room.roomName+'/'+ page.Home[i].room.devices[j].deviceName+key%>"
                                                                                         class="form-label">Servo
-                                                                                        degree: </label><span
-                                                                                        id="slider"></span>
+                                                                                        degree: </label><span></span>
                                                                                     <input type="range"
                                                                                         name="<%= '/'+page.homeName+'/'+page.Home[i].room.roomName+'/'+ page.Home[i].room.devices[j].deviceName+key%>"
                                                                                         class="form-range" min="0"
@@ -141,6 +141,7 @@
                                                                                 id="charts-<%=page.Home[i].room.devices[j].deviceName%>">
                                                                                 <button type="button"
                                                                                     class="btn btn-info btn-lg"
+                                                                                    onclick="getchartData('<%=page.Home[i].room.devices[j].deviceName%>')"
                                                                                     data-toggle="modal"
                                                                                     data-target="#myModal">Open
                                                                                     Data Graphs</button>
@@ -148,7 +149,7 @@
                                                                                 <!-- Modal -->
                                                                                 <div class="modal fade" id="myModal"
                                                                                     role="dialog">
-                                                                                    <div class="modal-dialog">
+                                                                                    <div class="modal-dialog modal-xl">
 
                                                                                         <!-- Modal content-->
                                                                                         <div class="modal-content">
@@ -157,10 +158,11 @@
                                                                                                     class="close"
                                                                                                     data-dismiss="modal">&times;</button>
                                                                                             </div>
-                                                                                            <div class="modal-body">
-                                                                                                <p>Some text in the
-                                                                                                    modal.</p>
-                                                                                                <canvas id="myChart"
+                                                                                            <div class="modal-body" >
+                                                                                                <p>Data Graphs</p>
+                                                                                                <canvas
+                                                                                                    class="chartModal"
+                                                                                                    id="Chart-<%=page.Home[i].room.devices[j].deviceName%>"
                                                                                                     deviceName="<%=page.Home[i].room.devices[j].deviceName%>"></canvas>
                                                                                             </div>
                                                                                             <div class="modal-footer">
@@ -199,13 +201,12 @@
         console.log(slider);
         for (i = 0; i < slider.length; i++) {
             slider[i].oninput = function () {
-
+                const id = i;
                 let body = { topic: this.name, msg: this.value };
                 console.log(body);
                 httpRequest("/api/publish", 'post', body);
-                var output = slider[i].getElementById("slider");
-                output.innerHTML = slider.value;
-                output.innerHTML = '<br>' + '<code>' + this.name + '</code> = ' + this.value;
+                var output = document.getElementById(this.name);
+                output.innerHTML = '<b>Servo degree:</b> <code>' + this.value + '</code>';
             }
         }
 
@@ -242,32 +243,50 @@
     </script>
 
     <script>
-        var ctx = document.getElementById("myChart").getContext('2d');
-        var device = document.getElementById("myChart");
-        window.onload = async () => {
-            let datas = JSON.parse(await httpRequest("/api/data?deviceName=" + device.getAttribute("deviceName"), 'get'));
-            let types = Object.keys(datas);
-            console.log(types);
-        }
+        async function getchartData(id) {
+            console.log(id);
+            var ctx = document.getElementById("Chart-" + id).getContext('2d');
+            datas = JSON.parse(await httpRequest("/api/data?deviceName=" + id, 'get'));
+            var types = Object.keys(datas);
 
-        const myChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-                datasets: [{
-                    label: '# of Votes',
-                    data: [12, 19, 3, 5, 2, 3],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    y: {
-                        beginAtZero: true
+            var xValues = [50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150];
+            var yValues = [7, 8, 8, 9, 9, 9, 10, 11, 14, 14, 15];
+            console.log(datas.temp.map((o) => parseFloat(o.data)));
+            temps = await datas?.temp.map((o) => parseFloat(o.data))
+            hums = await datas?.humidity.map((o) => parseFloat(o.data))
+            dates = await datas?.temp.map((o) => new Date(o.date).getHours() +":" + new Date(o.date).getMinutes())
+            const myChart = await new Chart(ctx, {
+                type: "line",
+                data: {
+                    labels: dates,
+                    datasets: [{
+                        label:"Temperature",
+                        fill: false,
+                        lineTension: 0,
+                        backgroundColor: "rgba(0,0,255,1.0)",
+                        borderColor: "rgba(0,0,255,0.1)",
+                        data: temps
+                    },{
+                        label:"Humudity",
+                        fill: false,
+                        lineTension: 0,
+                        backgroundColor: "rgba(233,33,200,1.0)",
+                        borderColor: "rgba(233,33,200,1.0)",
+                        data: hums
+                    }]
+                },
+                options: {
+                    legend: { display: true },
+                    scales: {
+                        yAxes: [{ ticks: { min: -10, max: 100 } }],
                     }
                 }
-            }
-        });
+            });
+
+        }
+
+
+
 
     </script>
     <script>
